# src/server/http_server.rs
@@ -476,10 +476,19 @@ where
         workflow_id: i64,
         offset: Option<i64>,
         limit: Option<i64>,
+        sort_by: Option<String>,
+        reverse_sort: Option<bool>,
         context: &C,
     ) -> Result<ListRoCrateEntitiesResponse, ApiError> {
-        self.transport_list_ro_crate_entities(workflow_id, offset, limit, context)
-            .await
+        self.transport_list_ro_crate_entities(
+            workflow_id,
+            offset,
+            limit,
+            sort_by,
+            reverse_sort,
+            context,
+        )
+        .await
     }
 
     /// Update an RO-Crate entity.
@@ -943,10 +952,19 @@ where
         workflow_id: i64,
         offset: Option<i64>,
         limit: Option<i64>,
+        sort_by: Option<String>,
+        reverse_sort: Option<bool>,
         context: &C,
     ) -> Result<ListJobDependenciesResponse, ApiError> {
-        self.transport_list_job_dependencies(workflow_id, offset, limit, context)
-            .await
+        self.transport_list_job_dependencies(
+            workflow_id,
+            offset,
+            limit,
+            sort_by,
+            reverse_sort,
+            context,
+        )
+        .await
     }
 
     async fn list_job_file_relationships(
@@ -954,10 +972,19 @@ where
         workflow_id: i64,
         offset: Option<i64>,
         limit: Option<i64>,
+        sort_by: Option<String>,
+        reverse_sort: Option<bool>,
         context: &C,
     ) -> Result<ListJobFileRelationshipsResponse, ApiError> {
-        self.transport_list_job_file_relationships(workflow_id, offset, limit, context)
-            .await
+        self.transport_list_job_file_relationships(
+            workflow_id,
+            offset,
+            limit,
+            sort_by,
+            reverse_sort,
+            context,
+        )
+        .await
     }
 
     async fn list_job_user_data_relationships(
@@ -965,10 +992,19 @@ where
         workflow_id: i64,
         offset: Option<i64>,
         limit: Option<i64>,
+        sort_by: Option<String>,
+        reverse_sort: Option<bool>,
         context: &C,
     ) -> Result<ListJobUserDataRelationshipsResponse, ApiError> {
-        self.transport_list_job_user_data_relationships(workflow_id, offset, limit, context)
-            .await
+        self.transport_list_job_user_data_relationships(
+            workflow_id,
+            offset,
+            limit,
+            sort_by,
+            reverse_sort,
+            context,
+        )
+        .await
     }
 
     async fn list_local_schedulers(
