# src/server/http_server/ro_crate_transport.rs
@@ -36,12 +36,14 @@ where
         workflow_id: i64,
         offset: Option<i64>,
         limit: Option<i64>,
+        sort_by: Option<String>,
+        reverse_sort: Option<bool>,
         context: &C,
     ) -> Result<ListRoCrateEntitiesResponse, ApiError> {
         authorize_workflow!(self, workflow_id, context, ListRoCrateEntitiesResponse);
         let (offset, limit) = process_pagination_params(offset, limit)?;
         self.ro_crate_api
-            .list_ro_crate_entities(workflow_id, offset, limit, context)
+            .list_ro_crate_entities(workflow_id, offset, limit, sort_by, reverse_sort, context)
             .await
     }
     pub(super) async fn transport_update_ro_crate_entity(
